<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:ignore="MissingTranslation">Notes donate</string>
    <string name="title_create" tools:ignore="MissingTranslation">New note</string>
    <string name="title_edit" tools:ignore="MissingTranslation">Edit: %1$s</string>
    <string name="menu_add" tools:ignore="MissingTranslation">New note</string>
    <string name="menu_delete" tools:ignore="MissingTranslation">Delete</string>
    <string name="menu_revert" tools:ignore="MissingTranslation">Revert changes</string>
    <string name="menu_copy" tools:ignore="MissingTranslation">Copy note</string>
    <string name="menu_cancel" tools:ignore="MissingTranslation">Cancel</string>
    <string name="menu_setcompleted" tools:ignore="MissingTranslation">Set done</string>
    <string name="menu_setuncompleted" tools:ignore="MissingTranslation">Set not done</string>
    <string name="menu_deletelist" tools:ignore="MissingTranslation">Delete list</string>
    <string name="menu_sync" tools:ignore="MissingTranslation">Refresh</string>
    <string name="menu_share" tools:ignore="MissingTranslation">Share</string>
    <string name="menu_preferences" tools:ignore="MissingTranslation">Settings</string>
    <string name="menu_renamelist" tools:ignore="MissingTranslation">Rename list</string>
    <string name="menu_createlist" tools:ignore="MissingTranslation">Create list</string>
    <string name="menu_clearcompleted" tools:ignore="MissingTranslation">Clear completed</string>
    <string name="menu_setdefaultlist" tools:ignore="MissingTranslation">Set as default list</string>
    <string name="menu_managelists" tools:ignore="MissingTranslation">Manage lists</string>
    <string name="delete_list_warning" tools:ignore="MissingTranslation">Are you sure you want to delete the list? The list will be permanently deleted.</string>
    <string name="editor_due_date_hint" tools:ignore="MissingTranslation">Due date</string>
    <string name="editor_title_hint" tools:ignore="MissingTranslation">Title</string>
    <string name="editor_note_hint" tools:ignore="MissingTranslation">Note</string>
    <string name="resolve_edit" tools:ignore="MissingTranslation">Edit note</string>
    <string name="error_title" tools:ignore="MissingTranslation">Error</string>
    <string name="error_message" tools:ignore="MissingTranslation">Error loading note</string>
    <string name="search_hint" tools:ignore="MissingTranslation">Search</string>
    <string name="settings_theme" tools:ignore="MissingTranslation">Current theme</string>
    <string name="settings_theme_dialog" tools:ignore="MissingTranslation">Use theme</string>
    <string name="settings_lang" tools:ignore="MissingTranslation">Language</string>
    <string name="settings_lang_dialog" tools:ignore="MissingTranslation">@string/settings_lang</string>
    <string name="settings_cat_theme" tools:ignore="MissingTranslation">Theme</string>
    <string name="settings_cat_sorting" tools:ignore="MissingTranslation">Sorting</string>
    <string name="settings_sorting_type" tools:ignore="MissingTranslation">Sorting on</string>
    <string name="settings_sorting_type_dialog" tools:ignore="MissingTranslation">Sort on</string>
    <string name="settings_sorting_order" tools:ignore="MissingTranslation">Order</string>
    <string name="settings_sorting_order_dialog" tools:ignore="MissingTranslation">Order by</string>
    <string name="settings_summary_sort_type_alphabetic" tools:ignore="MissingTranslation">Title</string>
    <string name="settings_summary_sort_type_modified" tools:ignore="MissingTranslation">Latest modified</string>
    <string name="settings_summary_sort_type_duedate" tools:ignore="MissingTranslation">Due date</string>
    <string name="settings_summary_sort_type_serverposition" tools:ignore="MissingTranslation">My order</string>
    <string name="settings_summary_sort_order_asc" tools:ignore="MissingTranslation">Ascending</string>
    <string name="settings_summary_sort_order_desc" tools:ignore="MissingTranslation">Descending</string>
    <string name="settings_summary_theme_black" tools:ignore="MissingTranslation">Black</string>
    <string name="settings_summary_theme_dark" tools:ignore="MissingTranslation">Dark</string>
    <string name="settings_summary_theme_light" tools:ignore="MissingTranslation">Light</string>
    <string name="settings_summary_theme_light_dark_ab" tools:ignore="MissingTranslation">Light, dark action bar</string>
    <string name="settings_cat_appearance" tools:ignore="MissingTranslation">Appearance</string>
    <string name="settings_font_screen" tools:ignore="MissingTranslation">Font settings</string>
    <string name="settings_font_screen_summary" tools:ignore="MissingTranslation">You can change the type and size of the fonts</string>
    <string name="settings_cat_font_editor" tools:ignore="MissingTranslation">Editor</string>
    <string name="settings_font_type" tools:ignore="MissingTranslation">Font</string>
    <string name="settings_font_type_dialog" tools:ignore="MissingTranslation">Select a font</string>
    <string name="settings_font_size" tools:ignore="MissingTranslation">Font size</string>
    <string name="preference_preview_text" tools:ignore="MissingTranslation">This is how the editor text will appear</string>
    <string name="settings_text_preview_title" tools:ignore="MissingTranslation">Preview</string>
    <string name="monospace" tools:ignore="MissingTranslation">Monospace</string>
    <string name="sans" tools:ignore="MissingTranslation">Sans</string>
    <string name="serif" tools:ignore="MissingTranslation">Serif</string>
    <string name="settings_sync_freq_title" tools:ignore="MissingTranslation">Sync type</string>
    <string name="settings_account_title" tools:ignore="MissingTranslation">Select an account</string>
    <string name="settings_account_summary" tools:ignore="MissingTranslation">Click to switch account</string>
    <string name="settings_sync_enable_title" tools:ignore="MissingTranslation">Google Tasks sync</string>
    <string name="settings_sync_enable_summary" tools:ignore="MissingTranslation">Synchronize notes with your Google account</string>
    <string name="settings_cat_syncing" tools:ignore="MissingTranslation">Synchronization</string>
    <string name="manual" tools:ignore="MissingTranslation">Manual</string>
    <string name="minutes" tools:ignore="MissingTranslation">minutes</string>
    <string name="hours" tools:ignore="MissingTranslation">hours</string>
    <string name="onehour" tools:ignore="MissingTranslation">One hour</string>
    <string name="oneday" tools:ignore="MissingTranslation">One day</string>
    <string name="yes" tools:ignore="MissingTranslation">Yes</string>
    <string name="no" tools:ignore="MissingTranslation">No</string>
    <string name="ok" tools:ignore="MissingTranslation">OK</string>
    <string name="show_from_all_lists" tools:ignore="MissingTranslation">All lists</string>
    <string name="default_list_needed_warning" tools:ignore="MissingTranslation">Set a default list first</string>
    <string name="reverted" tools:ignore="MissingTranslation">Reverted changes</string>
    <string name="notecopied" tools:ignore="MissingTranslation">Copied</string>
    <string name="deleted" tools:ignore="MissingTranslation">Deleted</string>
    <string name="items" tools:ignore="MissingTranslation">notes</string>
    <string name="permission_read_label" tools:ignore="MissingTranslation">read notes and lists</string>
    <string name="permission_read_desc" tools:ignore="MissingTranslation">Allows the application to read your notes and related lists.</string>
    <string name="permission_write_label" tools:ignore="MissingTranslation">modify notes and lists</string>
    <string name="permission_write_desc" tools:ignore="MissingTranslation">Allows the application to insert, update and delete notes and lists.</string>
    <string name="settings_header_list" tools:ignore="MissingTranslation">List settings</string>
    <string name="settings_header_list_summary" tools:ignore="MissingTranslation"></string>
    <string name="settings_header_appearance" tools:ignore="MissingTranslation">@string/settings_cat_appearance</string>
    <string name="settings_header_appearance_summary" tools:ignore="MissingTranslation"></string>
    <string name="settings_header_sync" tools:ignore="MissingTranslation">@string/settings_cat_syncing</string>
    <string name="settings_header_sync_summary" tools:ignore="MissingTranslation"></string>
    <string name="settings_list_dialog" tools:ignore="MissingTranslation">Select a list</string>
    <string name="settings_list" tools:ignore="MissingTranslation">List</string>
    <string name="settings_list_summary" tools:ignore="MissingTranslation"></string>
    <string name="automatic" tools:ignore="MissingTranslation">Automatic</string>
    <string name="preferences_week_start_day_dialog" tools:ignore="MissingTranslation">Week starts on</string>
    <string name="preferences_week_start_day_title" tools:ignore="MissingTranslation">Week starts on</string>
    <string name="preferences_week_start_day_default" tools:ignore="MissingTranslation">-1</string>
    <plurals name="notecopied_msg">
        <item quantity="one">Copied one note</item>
        <item quantity="other">Copied %d notes</item>
    </plurals>
    <plurals name="notedeleted_msg">
        <item quantity="one">Deleted one note</item>
        <item quantity="other">Deleted %d notes</item>
    </plurals>
    <plurals name="mode_choose">
        <item quantity="one">Selected one note</item>
        <item quantity="other">Selected %d notes</item>
    </plurals>
    <string name="lock_note" tools:ignore="MissingTranslation">Lock note</string>
    <string name="unlock_note" tools:ignore="MissingTranslation">Unlock note</string>
    <string name="locked" tools:ignore="MissingTranslation">Locked</string>
    <string name="unlocked" tools:ignore="MissingTranslation">Unlocked</string>
    <string name="password_required" tools:ignore="MissingTranslation">Password required</string>
    <string name="settings_listitem" tools:ignore="MissingTranslation">Two line titles</string>
    <string name="settings_listitem_summary_on" tools:ignore="MissingTranslation">@string/widget_pref_preview_note_summary_off</string>
    <string name="settings_listitem_summary_off" tools:ignore="MissingTranslation">Note preview will be 2 lines</string>
    <string name="settings_listheader" tools:ignore="MissingTranslation">When showing all lists</string>
    <string name="settings_listheader_off" tools:ignore="MissingTranslation">Show as one list</string>
    <string name="settings_listheader_on" tools:ignore="MissingTranslation">Show list names</string>
    <string name="hide_checkbox" tools:ignore="MissingTranslation">Hide checkbox</string>
    <string name="hide_checkbox_summary_on" tools:ignore="MissingTranslation">Checkbox will be hidden</string>
    <string name="hide_checkbox_summary_off" tools:ignore="MissingTranslation">Checkbox will be shown</string>
    <string name="hide_note" tools:ignore="MissingTranslation">Hide note</string>
    <string name="hide_note_summary_on" tools:ignore="MissingTranslation">Note will be hidden</string>
    <string name="hide_note_summary_off" tools:ignore="MissingTranslation">Note will be shown</string>
    <string name="hide_date" tools:ignore="MissingTranslation">Hide due date</string>
    <string name="hide_date_summary_on" tools:ignore="MissingTranslation">Date will be hidden</string>
    <string name="hide_date_summary_off" tools:ignore="MissingTranslation">Date will be shown</string>
    <string name="title_rows" tools:ignore="MissingTranslation">Title max height</string>
    <string name="shortcut_help1" tools:ignore="MissingTranslation">If checked, the shortcut will create a new note in the selected list and open the editor. If unchecked, the shortcut will open the selected list.</string>
</resources>