<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2012 Jonas Kalderstam

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
  
          http://www.apache.org/licenses/LICENSE-2.0
  
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:robobunny="http://robobunny.com"
    android:key="preference_screen" >

    <ListPreference
        android:defaultValue="light"
        android:dialogTitle="@string/settings_theme_dialog"
        android:entries="@array/theme_preference"
        android:entryValues="@array/themevalues_preference"
        android:key="key_current_theme"
        android:summary="Selected option should be here"
        android:title="@string/settings_theme" />
    
    <PreferenceCategory android:title="@string/settings_list" >
        <CheckBoxPreference 
            android:defaultValue="true"
            android:key="key_listitem"
            android:title="@string/settings_listitem"
            android:summaryOn="@string/settings_listitem_summary_on"
            android:summaryOff="@string/settings_listitem_summary_off" />
        <ListPreference
            android:defaultValue="title COLLATE NOCASE"
            android:dialogTitle="@string/settings_sorting_type_dialog"
            android:entries="@array/sorting_preference"
            android:entryValues="@array/sortingvalues_preference"
            android:key="key_sort_type"
            android:summary="Selected option should be here"
            android:title="@string/settings_sorting_type" />
        <ListPreference
            android:defaultValue="ASC"
            android:dialogTitle="@string/settings_sorting_order_dialog"
            android:entries="@array/sorting_order_preference"
            android:entryValues="@array/sorting_ordervalues_preference"
            android:key="key_sort_order"
            android:summary="Selected option should be here"
            android:title="@string/settings_sorting_order" />
        <ListPreference
            android:key="key_default_list_id"
            android:title="@string/menu_setdefaultlist" />
        <CheckBoxPreference 
            android:defaultValue="true"
            android:key="key_listheaders"
            android:title="@string/settings_listheader"
            android:summaryOn="@string/settings_listheader_on"
            android:summaryOff="@string/settings_listheader_off" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/settings_cat_font_editor" >

    <com.nononsenseapps.ui.TextPreviewPreference
        android:key="key_text_preview"
        android:title="@string/settings_text_preview_title" />

    <com.robobunny.SeekBarPreference
        android:defaultValue="22"
        android:key="key_font_size_editor"
        android:max="50"
        android:title="@string/settings_font_size"
        robobunny:min="12"
        robobunny:unitsLeft=""
        robobunny:unitsRight="sp" />

    <ListPreference
        android:defaultValue="Sans"
        android:dialogTitle="@string/settings_font_type_dialog"
        android:entries="@array/font_type_preference"
        android:entryValues="@array/font_typevalues_preference"
        android:key="key_font_type_editor"
        android:summary="Selected option should be here"
        android:title="@string/settings_font_type" />
    <ListPreference
        android:defaultValue="@string/preferences_week_start_day_default"
        android:dialogTitle="@string/preferences_week_start_day_dialog"
        android:entries="@array/preferences_week_start_day_labels"
        android:entryValues="@array/preferences_week_start_day_values"
        android:key="preferences_week_start_day"
        android:title="@string/preferences_week_start_day_title" />
    </PreferenceCategory>

</PreferenceScreen>