<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_add"
        android:icon="?ic_action_compose"
        android:orderInCategory="0"
        android:showAsAction="ifRoom"
        android:title="@string/menu_add"/>
    
    <item
        android:id="@+id/menu_sync"
        android:icon="?ic_action_refresh"
        android:orderInCategory="1"
        android:showAsAction="ifRoom"
        android:title="@string/menu_sync"/>

    <item
        android:id="@+id/menu_createlist"
        android:orderInCategory="5"
        android:showAsAction="never"
        android:title="@string/menu_createlist"/>
    <item
        android:id="@+id/menu_renamelist"
        android:orderInCategory="6"
        android:showAsAction="never"
        android:title="@string/menu_renamelist"/>
    <item
        android:id="@+id/menu_deletelist"
        android:icon="?ic_menu_clear_playlist"
        android:orderInCategory="7"
        android:showAsAction="never"
        android:title="@string/menu_deletelist"/>
    <item
        android:id="@+id/menu_preferences"
        android:icon="?ic_menu_settings_holo"
        android:orderInCategory="8"
        android:showAsAction="never"
        android:title="@string/menu_preferences"/>

</menu>