<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

	<item android:id="@+id/modal_share" android:showAsAction="ifRoom"
		android:icon="?ic_menu_share_holo" android:title="@string/menu_share" />
	<item android:id="@+id/modal_copy" android:showAsAction="ifRoom"
		android:icon="?ic_menu_copy_holo" android:title="@string/menu_copy" />

	<item android:id="@+id/modal_delete" android:showAsAction="ifRoom"
		android:icon="?ic_action_delete" android:title="@string/menu_delete" />

	<item android:id="@+id/modal_setcompleted" android:showAsAction="never"
		android:icon="?ic_menu_mark" android:title="@string/menu_setcompleted" />
    <item android:id="@+id/modal_move_to_list" android:showAsAction="never"
		android:title="@string/menu_move_to_list" />

</menu>