<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_share"
        android:showAsAction="always"
        android:icon="?6_social_share"
        android:title="@string/menu_share"
        android:orderInCategory="3" />

    <item android:id="@+id/menu_delete" android:showAsAction="ifRoom"
		android:icon="?5_content_discard" android:title="@string/menu_delete"
		android:orderInCategory="4" />
    <item android:id="@+id/menu_copy"
          android:icon="?5_content_copy"
          android:title="@string/menu_copy"
          android:showAsAction="never" android:orderInCategory="5"/>
    <item android:id="@+id/menu_revert"
          android:icon="?5_content_undo"
          android:showAsAction="never"
          android:title="@string/menu_revert" android:orderInCategory="6"/>
</menu>