<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="widget_list_preference_screen" >

    <PreferenceCategory android:title="@string/settings_cat_sorting" >
        <ListPreference
            android:dialogTitle="Select the list to display"
            android:key="widget_key_list"
            android:summary="Selected list should be here"
            android:title="Selected list" />
        
        <ListPreference
            android:defaultValue="title COLLATE NOCASE"
            android:dialogTitle="@string/settings_sorting_type_dialog"
            android:entries="@array/sorting_preference"
            android:entryValues="@array/sortingvalues_preference"
            android:key="widget_key_sort_type"
            android:summary="Selected option should be here"
            android:title="@string/settings_sorting_type" />
        <ListPreference
            android:defaultValue="ASC"
            android:dialogTitle="@string/settings_sorting_order_dialog"
            android:entries="@array/sorting_order_preference"
            android:entryValues="@array/sorting_ordervalues_preference"
            android:key="widget_key_sort_order"
            android:summary="Selected option should be here"
            android:title="@string/settings_sorting_order" />
    </PreferenceCategory>

</PreferenceScreen>