<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_delete"
          android:icon="@drawable/ic_action_delete_dark"
          android:title="@string/menu_delete"
          android:showAsAction="ifRoom" android:orderInCategory="0"/>
    <item android:id="@+id/menu_share"
          android:icon="@drawable/ic_menu_share_holo_dark"
          android:title="@string/menu_share"
          android:showAsAction="ifRoom" android:orderInCategory="1"/>
    <item android:id="@+id/menu_copy"
          android:icon="@drawable/ic_menu_copy_holo_dark"
          android:title="@string/menu_copy"
          android:showAsAction="never" android:orderInCategory="2"/>
    <item android:id="@+id/menu_revert"
          android:icon="@drawable/ic_menu_revert"
          android:showAsAction="never"
          android:title="@string/menu_revert" android:orderInCategory="3"/>
</menu>