<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

	<item android:id="@+id/modal_share" android:showAsAction="ifRoom"
		android:icon="@drawable/ic_menu_share_holo_dark" android:title="@string/menu_share" />
	<item android:id="@+id/modal_copy" android:showAsAction="ifRoom"
		android:icon="@drawable/ic_menu_copy_holo_dark" android:title="@string/menu_copy" />

	<item android:id="@+id/modal_delete" android:showAsAction="ifRoom"
		android:icon="?ic_action_delete" android:title="@string/menu_delete"
		android:actionProviderClass="com.nononsenseapps.notepad.DeleteActionProvider" />

	<!--<item android:id="@+id/modal_delete" android:showAsAction="ifRoom" android:icon="@drawable/ic_action_delete_dark" 
		android:title="@string/menu_delete" /> -->

</menu>