<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="8dp"
    tools:context=".ShortcutConfig" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/settings_list"
        android:textAppearance="@android:style/TextAppearance.Holo.Medium"
        android:textColor="@android:color/primary_text_dark" />

    <Spinner
        android:id="@+id/list"
        style="?android:attr/spinnerStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/textView1"
        android:prompt="@string/settings_list_dialog"
        android:spinnerMode="dialog" />

    <CheckBox
        android:id="@+id/create_note"
        android:layout_width="match_parent"
        android:layout_height="@dimen/list_item_min_size"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/list"
        android:text="@string/title_create"
        android:checked="true"
        android:textAppearance="@android:style/TextAppearance.Holo.Large"
        android:textColor="@android:color/primary_text_dark" />

    <Button
        android:id="@+id/ok"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/ok" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/create_note"
        android:layout_below="@+id/create_note"
        android:text="@string/shortcut_help1"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>