<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/list_search"
          android:title="@string/search_hint"
          android:icon="@drawable/ic_menu_search_holo_light"
          android:showAsAction="ifRoom"
          android:actionViewClass="android.widget.SearchView" android:orderInCategory="0"/>
    <item android:id="@+id/menu_add"
          android:icon="@drawable/ic_action_compose_light"
          android:title="@string/menu_add"
          android:alphabeticShortcut='a'
          android:showAsAction="ifRoom" android:orderInCategory="1"/>
    <!--  If there is currently data in the clipboard, this adds a PASTE menu item to the menu
          so that the user can paste in the data.. -->
    <item android:id="@+id/menu_paste"
          android:icon="@drawable/ic_menu_paste_holo_light"
          android:title="@string/menu_paste"
          android:alphabeticShortcut='p' android:orderInCategory="2"/>
    <item android:id="@+id/menu_preferences"
          android:icon="@drawable/ic_menu_settings_holo_light"
          android:title="@string/menu_preferences"
          android:showAsAction="never"
          android:alphabeticShortcut='p' android:orderInCategory="3"/>
</menu>